# Amazon_Rose_Forest_01

./: .git-credentials  .gitconfig  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: AGENTS.md  index_performance.rs  vector_operations.rs
dnas/knowledge/: dna.yaml
dnas/knowledge/zomes/knowledge/: Cargo.toml  zome.json
dnas/knowledge/zomes/knowledge/src/: lib.rs
dnas/value_flow/: dna.yaml
dnas/value_flow/zomes/value_flow/: Cargo.toml  zome.json
dnas/value_flow/zomes/value_flow/src/: lib.rs
src/: ad4m.rs  code_analysis.rs  evaluation.rs  hypothesis.rs  ipfs.rs  lib.rs  llm.rs  main.rs
src/consciousness/: AGENTS.md  ad4m_bridge.rs  introspection.rs  mod.rs  swarm.rs
src/core/: AGENTS.md  centroid.rs  centroid_crdt.rs  hierarchical.rs  metrics.rs  mod.rs  vector.rs
src/darwin/: AGENTS.md  agent.rs  consciousness_metrics.rs  evolution.rs  exploration.rs  mod.rs  quantum_consciousness.rs  reality.rs  ritual.rs  self_improvement.rs  transcendence_engine.rs  validation.rs
src/governance/: AGENTS.md  dao.rs  mod.rs  zkp.rs
src/holochain/: AGENTS.md  arbitration.rs  dna.rs  entries.rs  hash.rs  mod.rs  transparency.rs  utils.rs  value_flow.rs  zome.rs
src/holochain/semantic_crdt/: mod.rs
src/intelligence/: AGENTS.md  federated_learning.rs  mod.rs  orchestrator.rs
src/nerv/: AGENTS.md  evolution.rs  mod.rs  replication.rs  runtime.rs  synchrony.rs  versioning.rs
src/network/: AGENTS.md  circuit_breaker.rs  mod.rs
src/semantic_crdt/: mod.rs
src/server/: AGENTS.md  api.rs  metrics.rs  mod.rs
src/sharding/: AGENTS.md  hilbert.rs  manager.rs  migration.rs  mod.rs  vector_index.rs
src/utils/: AGENTS.md  config.rs  errors.rs
tests/: AGENTS.md  centroid_crdt.rs  circuit_breaker.rs  darwin.rs  metrics.rs  new_layers.rs  runtime.rs  server_endpoints.rs  server_metrics.rs  server_stats.rs  shard_manager.rs
