[package]
name = "amazon-rose-forest"
version = "0.1.0"
edition = "2021"
description = "Amazon Rose Forest distributed vector database"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/amazon-rose-forest"

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
dashmap = "5.4.0"
rand = "0.8"
bytes = "1.4"
uuid = { version = "1.3", features = ["v4", "serde"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
hashbrown = "0.14"
prometheus = "0.13"
once_cell = "1.18.0"
rand_distr = "0.4.3"

[dev-dependencies]
criterion = "0.4"
tokio-test = "0.4"
proptest = "1.1"
rand = "0.8"
rand_chacha = "0.3"

[[bench]]
name = "vector_operations"
harness = false