[package]
name = "amazon-rose-forest"
version = "0.1.0"
edition = "2021"
description = "Amazon Rose Forest distributed vector database"
authors = ["Anthony Garrett <kalisam@gmail.com>"]
license = "MIT"
repository = "https://github.com/kalisam/amazon_rose_forest_01"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
dashmap = "6.1.0"
rand = "0.9.2"
bytes = "1.4"
uuid = { version = "1.3", features = ["v4", "serde"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
hashbrown = "0.15.4"
prometheus = "0.14.0"
once_cell = "1.21.3"
rand_distr = "0.5.1"
sha2 = "0.10.7"  # Added SHA-2 cryptographic hash functions
sha3 = { version = "0.10", optional = true }
blake3 = { version = "1", optional = true }
serde_bytes = "0.11"
wide = "0.7"
reqwest = { version = "0.12.22", features = ["json", "multipart"] }
warp = "0.4.1"
bulletproofs = "5.0.0"
ad4m-client = "0.10.1-release-candidate-3"
sysinfo = "0.36.1"


# Holochain dependencies
hdk = { version = "0.5.4", features = ["macros"] }
holochain_types = "0.5.4" 
holo_hash = "0.5.4"
holochain_zome_types = "0.5.4"
holochain = { version = "0.5.4", optional = true }
petgraph = "0.8.2"
nalgebra = "0.34.0"
opentelemetry = "0.30.0"
opentelemetry-otlp = "0.30.0"

[dev-dependencies]
criterion = "0.7.0"
tokio-test = "0.4"
proptest = "1.1"
rand = "0.9.2"
rand_chacha = "0.9.0"

[features]
default = ["sha2"]
formal_verification = []
holochain_conductor = ["holochain"]
sha2 = []
sha3 = ["dep:sha3"]
blake3 = ["dep:blake3"]

[[bench]]
name = "vector_operations"
harness = false
